@@ -6,6 +6,7 @@ It is my pleasure to announce to you the MongoDB C driver 1.1.10.
 This is a patch release with bug fixes:
 
  * Occasional crash reconnecting to replica set.
+ * Queries sent to recovering replica set members.
  * Hang after network error sending a large message.
 
 Thanks to everyone who contributed to the development of this point release for
